--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@fontsource/roboto": "^4.5.8",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.131",
     "@mui/material": "^5.13.1",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/x-date-pickers": "^6.5.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -17,10 +19,12 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "emailjs-com": "^3.2.0",
     "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^6.0.0",
     "mdb-ui-kit": "^6.3.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-auth-kit": "^2.12.2",
     "react-bootstrap": "^2.7.4",
