--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "emailjs-com": "^3.2.0",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^6.0.0",
     "mdb-ui-kit": "^6.3.0",
@@ -33,6 +34,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.7.3",
     "react-svg": "^16.1.12",
     "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4"
